update all routes
