# src/routers/index.ts
@@ -2,6 +2,9 @@ import {Router} from "express";
 import authRouter from "./auth.route";
 import employeeRouter from "./employee.route";
 import { authMiddleware } from "../middleware/authMiddleware";
+import produtosRoutes from "./produtos.routes";
+import fornecedoresRoutes from "./fornecedores.routes";
+import cotacoesRoutes from "./cotacoes.routes";
 
 const routers = Router();
 
@@ -10,4 +13,7 @@ routers.get("/",(req, res)=>{
 });
 routers.use("/auth", authRouter);
 routers.use("/employees",authMiddleware, employeeRouter);
+routers.use('/produtos',authMiddleware, produtosRoutes);
+routers.use('/fornecedores',authMiddleware, fornecedoresRoutes);
+routers.use('/cotacoes',authMiddleware, cotacoesRoutes);
 export default routers;
